IDisposable implemented where needed
!!! UnitTests on AdminManager are not compiling

--- a/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
+++ b/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AdminManagerUnitTest.cs" />
     <Compile Include="ClientUnitTest.cs" />
     <Compile Include="Mocking\CountCallTetriNETAdminCallback.cs" />
     <Compile Include="Mocking\CountCallTetriNETCallback.cs" />
