Bug fixed thanks to unit tests
Unit tests continued

--- a/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
+++ b/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
@@ -51,7 +51,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AdminManagerUnitTest.cs" />
+    <Compile Include="BanManagerUnitTest.cs" />
     <Compile Include="ClientUnitTest.cs" />
+    <Compile Include="GameRoomManagerUnitTest.cs" />
+    <Compile Include="GameRoomUnitTest.cs" />
     <Compile Include="Mocking\CountCallTetriNETAdminCallback.cs" />
     <Compile Include="Mocking\CountCallTetriNETCallback.cs" />
     <Compile Include="Mocking\HostMock.cs" />
@@ -61,6 +64,8 @@
     <Compile Include="Mocking\RaiseExceptionTetriNETCallback.cs" />
     <Compile Include="PieceProviderUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerUnitTest.cs" />
+    <Compile Include="WaitRoomUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TetriNET2.Common\TetriNET2.Common.csproj">
