Server: 50%  GameRoom: 80%  UnitTest: 40%
BanManager load/save started

--- a/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
+++ b/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AdminManagerUnitTest.cs" />
     <Compile Include="BanManagerUnitTest.cs" />
+    <Compile Include="ClientManagerUnitTest.cs" />
     <Compile Include="ClientUnitTest.cs" />
     <Compile Include="GameRoomManagerUnitTest.cs" />
     <Compile Include="GameRoomUnitTest.cs" />
