--- a/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
+++ b/TetriNET2.Tests.Server/TetriNET2.Tests.Server.csproj
@@ -58,8 +58,8 @@
     <Compile Include="GameRoomUnitTest.cs" />
     <Compile Include="Helpers\EventChecker.cs" />
     <Compile Include="Mocking\ActionQueueMock.cs" />
-    <Compile Include="Mocking\AdminMock.cs" />
-    <Compile Include="Mocking\ClientMock.cs" />
+    <Compile Include="ClientSide\AdminFake.cs" />
+    <Compile Include="ClientSide\ClientFake.cs" />
     <Compile Include="Mocking\CountCallTetriNETAdminCallback.cs" />
     <Compile Include="Mocking\CountCallTetriNETCallback.cs" />
     <Compile Include="Mocking\HostMock.cs" />
