--- a/TetriNET2.Common/TetriNET2.Common.csproj
+++ b/TetriNET2.Common/TetriNET2.Common.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +56,8 @@
     <Compile Include="Contracts\ITetriNETAdmin.cs" />
     <Compile Include="Contracts\ITetriNETAdminCallback.cs" />
     <Compile Include="Contracts\ITetriNETCallback.cs" />
+    <Compile Include="Contracts\WCF\IWCFTetriNETAdmin.cs" />
+    <Compile Include="Contracts\WCF\IWCFTetriNET.cs" />
     <Compile Include="DataContracts\AdminData.cs" />
     <Compile Include="DataContracts\BanEntryData.cs" />
     <Compile Include="DataContracts\ClientData.cs" />
