--- a/TetriNET2.Server.ConsoleApp/NLog.config
+++ b/TetriNET2.Server.ConsoleApp/NLog.config
@@ -13,6 +13,6 @@
 
   <rules>
     <logger name="*" minlevel="Trace" writeTo="logfile" />
-    <logger name="*" minlevel="Info" writeTo="console" />
+    <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
 </nlog>
