--- a/TetriNET.Admin.ConsoleApp/TetriNET2.Admin.ConsoleApp.csproj
+++ b/TetriNET.Admin.ConsoleApp/TetriNET2.Admin.ConsoleApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A905C246-6C5D-490B-90A6-C91CA5C04940}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{39921BE3-5A87-489F-999A-73F1FE20ADDC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TetriNET2.Server</RootNamespace>
-    <AssemblyName>TetriNET2.Server</AssemblyName>
+    <RootNamespace>TetriNET2.Admin.ConsoleApp</RootNamespace>
+    <AssemblyName>TetriNET2.Admin.ConsoleApp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,20 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="JetBrains.Annotations, Version=6.1.0.0, Culture=neutral, PublicKeyToken=3f033448d4bb5376, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\JetBrains.Annotations.7.0\lib\net45\JetBrains.Annotations.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,40 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IHost\IHost.cs" />
-    <Compile Include="Interfaces\IHost\ITetriNETAdminHost.cs" />
-    <Compile Include="Interfaces\IHost\ITetriNETHost.cs" />
-    <Compile Include="Interfaces\IPasswordManager.cs" />
-    <Compile Include="PasswordManager.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Admin.cs" />
-    <Compile Include="AdminManager.cs" />
-    <Compile Include="BanManager.cs" />
-    <Compile Include="Client.cs" />
-    <Compile Include="ClientManager.cs" />
-    <Compile Include="GameRoom.cs" />
-    <Compile Include="GameRoomManager.cs" />
-    <Compile Include="Interfaces\IAdmin.cs" />
-    <Compile Include="Interfaces\IAdminManager.cs" />
-    <Compile Include="Interfaces\IBanManager.cs" />
-    <Compile Include="Interfaces\IClient.cs" />
-    <Compile Include="Interfaces\IClientManager.cs" />
-    <Compile Include="Interfaces\IFactory.cs" />
-    <Compile Include="Interfaces\IGameRoom.cs" />
-    <Compile Include="Interfaces\IGameRoomManager.cs" />
-    <Compile Include="Interfaces\IPieceProvider.cs" />
-    <Compile Include="Interfaces\IServer.cs" />
-    <Compile Include="PieceBag.cs" />
-    <Compile Include="Server.cs" />
-    <Compile Include="WCFHost\IPFilterServiceBehavior.cs" />
-    <Compile Include="WCFHost\WCFHost.cs" />
-    <Compile Include="WCFHost\WCFTetriNETAdminHost.cs" />
-    <Compile Include="WCFHost\WCFTetriNETHost.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\TetriNET2.Common\TetriNET2.Common.csproj">
       <Project>{36268a24-7765-41c9-b1ee-f6105be7e145}</Project>
