--- a/TetriNET2.Server.Tests/TetriNET2.Server.Tests.csproj
+++ b/TetriNET2.Server.Tests/TetriNET2.Server.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{E01286DD-FC82-4592-8BDA-DEB81B7772C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TetriNET2.Tests.Server</RootNamespace>
-    <AssemblyName>TetriNET2.Tests.Server</AssemblyName>
+    <RootNamespace>TetriNET2.Server.Tests</RootNamespace>
+    <AssemblyName>TetriNET2.Server.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -71,7 +71,6 @@
     <Compile Include="PieceProviderUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerUnitTest.cs" />
-    <Compile Include="WCFTetriNETAdminHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TetriNET2.Common\TetriNET2.Common.csproj">
