--- a/TetriNET2.Admin/TetriNET2.Admin.csproj
+++ b/TetriNET2.Admin/TetriNET2.Admin.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39921BE3-5A87-489F-999A-73F1FE20ADDC}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{8F71BB94-5D82-453A-B05E-9323D380531E}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TetriNET2.Admin.ConsoleApp</RootNamespace>
-    <AssemblyName>TetriNET2.Admin.ConsoleApp</AssemblyName>
+    <RootNamespace>TetriNET2.Admin</RootNamespace>
+    <AssemblyName>TetriNET2.Admin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -35,22 +33,21 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Admin.cs" />
+    <Compile Include="Interfaces\IAdmin.cs" />
+    <Compile Include="Interfaces\IFactory.cs" />
+    <Compile Include="Interfaces\IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WCFProxy.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="NLog.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TetriNET2.Admin\TetriNET2.Admin.csproj">
-      <Project>{8f71bb94-5d82-453a-b05e-9323d380531e}</Project>
-      <Name>TetriNET2.Admin</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TetriNET2.Common\TetriNET2.Common.csproj">
       <Project>{36268a24-7765-41c9-b1ee-f6105be7e145}</Project>
       <Name>TetriNET2.Common</Name>
