--- a/TetriNET2.Server.Tests/TetriNET2.Server.Tests.csproj
+++ b/TetriNET2.Server.Tests/TetriNET2.Server.Tests.csproj
@@ -54,8 +54,8 @@
     <Compile Include="BanManagerUnitTest.cs" />
     <Compile Include="ClientManagerUnitTest.cs" />
     <Compile Include="ClientUnitTest.cs" />
-    <Compile Include="GameRoomManagerUnitTest.cs" />
-    <Compile Include="GameRoomUnitTest.cs" />
+    <Compile Include="GameManagerUnitTest.cs" />
+    <Compile Include="GameUnitTest.cs" />
     <Compile Include="Helpers\EventChecker.cs" />
     <Compile Include="Mocking\ActionQueueMock.cs" />
     <Compile Include="ClientSide\AdminFake.cs" />
