--- a/TetriNET2.Admin/TetriNET2.Admin.csproj
+++ b/TetriNET2.Admin/TetriNET2.Admin.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.cs" />
+    <Compile Include="Interfaces\ClientListInGameReceived.cs" />
     <Compile Include="Interfaces\IAdmin.cs" />
     <Compile Include="Interfaces\IFactory.cs" />
     <Compile Include="Interfaces\IProxy.cs" />
