--- a/TetriNET2.Server/TetriNET2.Server.csproj
+++ b/TetriNET2.Server/TetriNET2.Server.csproj
@@ -52,8 +52,8 @@
     <Compile Include="BanManager.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="ClientManager.cs" />
-    <Compile Include="GameRoom.cs" />
-    <Compile Include="GameRoomManager.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="Interfaces\IAdmin.cs" />
     <Compile Include="Interfaces\IAdminManager.cs" />
     <Compile Include="Interfaces\IBanManager.cs" />
