--- a/TetriNET2.Client/TetriNET2.Client.csproj
+++ b/TetriNET2.Client/TetriNET2.Client.csproj
@@ -43,7 +43,11 @@
     <Compile Include="Client.cs" />
     <Compile Include="Interfaces\IClient.cs" />
     <Compile Include="Interfaces\IFactory.cs" />
+    <Compile Include="Interfaces\IInventory.cs" />
+    <Compile Include="Interfaces\IPieceBag.cs" />
     <Compile Include="Interfaces\IProxy.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="PieceArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WCFProxy.cs" />
   </ItemGroup>
