--- a/TetriNET2.Client.ConsoleApp/TetriNET2.Client.ConsoleApp.csproj
+++ b/TetriNET2.Client.ConsoleApp/TetriNET2.Client.ConsoleApp.csproj
@@ -37,8 +37,10 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameController\GameController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ConsoleUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
