--- a/TetriNET2.Client.ConsoleApp/TetriNET2.Client.ConsoleApp.csproj
+++ b/TetriNET2.Client.ConsoleApp/TetriNET2.Client.ConsoleApp.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TetriNET2.Client.ConsoleApp</RootNamespace>
     <AssemblyName>TetriNET2.Client.ConsoleApp</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TetriNET2.Client.WCFProxy\TetriNET2.Client.WCFProxy.csproj">
+      <Project>{fd2e97fb-4713-4f1f-a301-a9af28a23ecc}</Project>
+      <Name>TetriNET2.Client.WCFProxy</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TetriNET2.Client\TetriNET2.Client.csproj">
       <Project>{21f10459-5374-45f7-b1c6-241d7f12e19e}</Project>
       <Name>TetriNET2.Client</Name>
