--- a/TetriNET2.Server.ConsoleApp/TetriNET2.Server.ConsoleApp.csproj
+++ b/TetriNET2.Server.ConsoleApp/TetriNET2.Server.ConsoleApp.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TetriNET2.Server.ConsoleApp</RootNamespace>
     <AssemblyName>TetriNET2.Server.ConsoleApp</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -49,6 +51,10 @@
     <ProjectReference Include="..\TetriNET2.Common\TetriNET2.Common.csproj">
       <Project>{36268a24-7765-41c9-b1ee-f6105be7e145}</Project>
       <Name>TetriNET2.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TetriNET2.Server.WCFHost\TetriNET2.Server.WCFHost.csproj">
+      <Project>{1a776ac3-c212-44cd-ada0-0be757fc0291}</Project>
+      <Name>TetriNET2.Server.WCFHost</Name>
     </ProjectReference>
     <ProjectReference Include="..\TetriNET2.Server\TetriNET2.Server.csproj">
       <Project>{a905c246-6c5d-490b-90a6-c91ca5c04940}</Project>
