--- a/TetriNET2.Server/TetriNET2.Server.csproj
+++ b/TetriNET2.Server/TetriNET2.Server.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TetriNET2.Server</RootNamespace>
     <AssemblyName>TetriNET2.Server</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -41,10 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IAddress.cs" />
     <Compile Include="Interfaces\IHost\IHost.cs" />
     <Compile Include="Interfaces\IHost\ITetriNETAdminHost.cs" />
     <Compile Include="Interfaces\IHost\ITetriNETClientHost.cs" />
     <Compile Include="Interfaces\IPasswordManager.cs" />
+    <Compile Include="Interfaces\ISettings.cs" />
     <Compile Include="PasswordManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Admin.cs" />
@@ -66,10 +69,6 @@
     <Compile Include="Interfaces\IServer.cs" />
     <Compile Include="PieceBag.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="WCFHost\IPFilterServiceBehavior.cs" />
-    <Compile Include="WCFHost\WCFHost.cs" />
-    <Compile Include="WCFHost\WCFTetriNETAdminHost.cs" />
-    <Compile Include="WCFHost\WCFTetriNETClientHost.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
